--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Medical Chatbot using Cohere and Google Gemini",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
