--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@pinecone-database/pinecone": "^4.0.0",
+    "@xenova/transformers": "^2.17.2",
     "cohere-ai": "^7.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.0",
